--- a/Skeleton.html
+++ b/Skeleton.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Robert Leht Drums</title>
+        <link rel="stylesheet" href="design.css" />
     </head>
     <body>
-        <p>
-            
-        </p>
+        <h1 id="pageTitle">Robert Leht Drums</h1>
+        <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Sotsmeedia ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
+        <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Sotsmeedia ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
+        <a href="https://www.youtube.com/user/Roobertist"><img src="./Sotsmeedia ikoonid/youtubeIcon.png" alt="Youtube logo" id="social_media_icon"></a>
     </body>
 </html>
