--- a/Skeleton.html
+++ b/Skeleton.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <h1 id="pageTitle">Robert Leht Drums</h1>
+        <div class="socialLinks">
         <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Sotsmeedia ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
         <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Sotsmeedia ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
         <a href="https://www.youtube.com/user/Roobertist"><img src="./Sotsmeedia ikoonid/youtubeIcon.png" alt="Youtube logo" id="social_media_icon"></a>
+    </div>
     </body>
 </html>
