--- a/Skeleton.html
+++ b/Skeleton.html
@@ -6,6 +6,15 @@
     </head>
     <body>
         <h1 id="pageTitle">Robert Leht Drums</h1>
+        <div class="dropdown">
+            <img class="dropdownBtn" src="menuIcon.png" alt="MenuIcon">
+            <div class = "dropdown-content">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Equipment</a>
+                <a href="#">Videos</a>
+            </div>
+        </div>
         <div class="socialLinks">
         <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Sotsmeedia ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
         <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Sotsmeedia ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
