--- a/suurkood.html
+++ b/suurkood.html
@@ -5,12 +5,9 @@
         <link rel="stylesheet" href="design.css" />
     </head>
     <body>
-        <div class="center">
-                <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/OSkvwowcNCQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-            </iframe>
-    </div> 
+        <iframe width="420" height="315"
+        src="https://www.youtube.com/embed/KA9-6RKggqY">
+        </iframe>
         <h1 id="pageTitle">Robert Leht Drums</h1>
         <div class="socialLinks">
         <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Sotsmeedia ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
