--- a/Skeleton.html
+++ b/Skeleton.html
@@ -3,9 +3,11 @@
     <head>
         <title>Robert Leht Drums</title>
         <link rel="stylesheet" href="design.css" />
+        <style type="text/css" id="custom-background-css"></style>
     </head>
     <body>
         <h1 id="pageTitle">Robert Leht Drums</h1>
+        <div class = "taust"></div>
         <div class="socialLinks">
         <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Sotsmeedia ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
         <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Sotsmeedia ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
