--- a/Skeleton.html
+++ b/Skeleton.html
@@ -7,9 +7,12 @@
     </head>
     <body>
         <div class="center">
-                <iframe width="560" height="315"
-                src="https://www.youtube.com/embed/OSkvwowcNCQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
+                <iframe 
+                src="https://www.youtube.com/embed/OSkvwowcNCQ" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen 
+                width="560" height="315">
+                
             </iframe>
     </div> 
         <h1 id="pageTitle">Robert Leht Drums</h1>
