--- a/Skeleton.html
+++ b/Skeleton.html
@@ -6,6 +6,9 @@
         <style type="text/css" id="custom-background-css"></style>
     </head>
     <body>
+        <div id="bg">
+        <img src="./pildid/RobertLeht.jpg" alt="">
+        </div>
         <div class="center">
                 <iframe width="560" height="315"
                 src="https://www.youtube.com/embed/OSkvwowcNCQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -13,9 +16,8 @@
             </iframe>
     </div> 
         <h1 id="pageTitle">Robert Leht Drums</h1>
-        <div class = "taust"></div>
         <div class="dropdown">
-            <img class="dropdownBtn" src="menuIcon.png" alt="MenuIcon">
+            <img class="dropdownBtn" src="./pildid/menuIcon.png" alt="MenuIcon">
             <div class = "dropdown-content">
                 <a href="#">Home</a>
                 <a href="#">About</a>
