--- a/Skeleton.html
+++ b/Skeleton.html
@@ -3,7 +3,7 @@
     <head>
         <title>Robert Leht Drums</title>
         <link rel="stylesheet" href="design.css" />
-        <style type="text/css" id="custom-background-css"></style>
+        <script src="cursor.js"></script>
     </head>
     <body>
         <div class="center">
@@ -15,7 +15,7 @@
         <h1 id="pageTitle">Robert Leht Drums</h1>
         <div class = "taust"></div>
         <div class="dropdown">
-            <img class="dropdownBtn" src="menuIcon.png" alt="MenuIcon">
+            <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
             <div class = "dropdown-content">
                 <a href="#">Home</a>
                 <a href="#">About</a>
