--- a/Skeleton.html
+++ b/Skeleton.html
@@ -9,7 +9,7 @@
         <div id="bg">
         <img src="./pildid/RobertLeht.jpg" alt="">
         </div>
-        <div class="center">
+        <div class="video">
                 <iframe 
                 src="https://www.youtube.com/embed/OSkvwowcNCQ" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
@@ -29,9 +29,9 @@
             </div>
         </div>
         <div class="socialLinks">
-        <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Sotsmeedia ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
-        <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Sotsmeedia ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
-        <a href="https://www.youtube.com/user/Roobertist"><img src="./Sotsmeedia ikoonid/youtubeIcon.png" alt="Youtube logo" id="social_media_icon"></a>
+        <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
+        <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
+        <a href="https://www.youtube.com/user/Roobertist"><img src="./Pildid/Sotsmeedia ikoonid/youtubeIcon.png" alt="Youtube logo" id="social_media_icon"></a>
     </div>
     </body>
 </html>
