Organized syntax, comments

--- a/Skeleton.html
+++ b/Skeleton.html
@@ -22,10 +22,10 @@
         <div class="dropdown">
             <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
             <div class = "dropdown-content">
-                <a href="#">Home</a>
+                <a href="./Skeleton.html">Home</a>
                 <a href="#">About</a>
                 <a href="#">Equipment</a>
-                <a href="#">Videos</a>
+                <a href="https://www.youtube.com/user/Roobertist">Videos</a>
             </div>
         </div>
         <div class="socialLinks">
