--- a/Skeleton.html
+++ b/Skeleton.html
@@ -7,8 +7,15 @@
     </head>
     <body>
         <div id="bg">
-        <img src="./pildid/RobertLeht.jpg" alt="">
+        <img src="./pildid/RobertLeht.jpg" alt="taustapilt">
         </div>
+        <section id="home_lehe_info">
+            <p>This is the official website for the drummer Robert Leht. Siia võiks veel teksti kirjutada. 
+                Siia võiks veel teksti kirjutada. Siia võiks veel teksti kirjutada. Siia võiks veel teksti kirjutada. 
+                Siia võiks veel teksti kirjutada. Siia võiks veel teksti kirjutada. Siia võiks veel teksti kirjutada.
+            </p>
+        </section>
+        
         <div class="video">
                 <iframe 
                 src="https://www.youtube.com/embed/OSkvwowcNCQ" frameborder="0"
@@ -17,7 +24,7 @@
                 width="560" height="315">
                 
             </iframe>
-    </div> 
+    </div>
         <h1 id="pageTitle">Robert Leht Drums</h1>
         <div class="dropdown">
             <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
