--- a/Skeleton.html
+++ b/Skeleton.html
@@ -10,11 +10,8 @@
         <img src="./pildid/RobertLeht.jpg" alt="">
         </div>
         <div class="video">
-                <iframe 
-                src="https://www.youtube.com/embed/OSkvwowcNCQ" frameborder="0"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen 
-                width="560" height="315">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/NEYbaGSEwjo" 
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 
             </iframe>
     </div> 
@@ -23,7 +20,7 @@
             <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
             <div class = "dropdown-content">
                 <a href="./Skeleton.html">Home</a>
-                <a href="#">About</a>
+                <a href="./About.html">About</a>
                 <a href="#">Equipment</a>
                 <a href="https://www.youtube.com/user/Roobertist">Videos</a>
             </div>
