--- a/About.html
+++ b/About.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Robert Leht Drums</title>
-        <link rel="stylesheet" href="design.css" />
+        <link rel="stylesheet" href="aboutcss.css" />
         <script src="cursor.js"></script>
     </head>
     <body>
