--- a/Skeleton.html
+++ b/Skeleton.html
@@ -15,13 +15,15 @@
                 Siia võiks veel teksti kirjutada. Siia võiks veel teksti kirjutada. Siia võiks veel teksti kirjutada.
             </p>
         </section>
-        
+        <section class="videosection">
+            </section>
         <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/NEYbaGSEwjo" 
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 
             </iframe>
     </div>
+
         <h1 id="pageTitle">Robert Leht Drums</h1>
         <div class="dropdown">
             <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
