Added example ilutuba and made code prettier

--- a/About.html
+++ b/About.html
@@ -6,6 +6,7 @@
         <script src="cursor.js"></script>
     </head>
     <body>
+        <div class="main-div">
         <section class="section-3">
             <h1 class="aboutpealkiri">My Drumming Favourites</h1>
             <p class="about">
@@ -47,6 +48,7 @@
         <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
         <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
         <a href="https://www.youtube.com/user/Roobertist"><img src="./Pildid/Sotsmeedia ikoonid/youtubeIcon.png" alt="Youtube logo" id="social_media_icon"></a>
-    </div>
+        </div>
+        </div>
     </body>
 </html>
