--- a/Skeleton.html
+++ b/Skeleton.html
@@ -24,7 +24,7 @@
             </iframe>
     </div>
 
-        <h1 id="pageTitle">Robert Leht Drums</h1>
+        <h1 id="pageTitle">ROBERT LEHT || DRUMS</h1>
         <div class="dropdown">
             <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
             <div class = "dropdown-content">
