--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@
         <div id="bg">
         <img src="./pildid/veebileht2.jpg" alt="">
         </div>  
-        <h1 id="pageTitle">Robert Leht Drums</h1>
+        <h1 id="pageTitle">ROBERT LEHT || DRUMS</h1>
         <div class="dropdown">
             <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
             <div class = "dropdown-content">
