paigutasin About lehte

--- a/Skeleton.html
+++ b/Skeleton.html
@@ -10,18 +10,18 @@
         <img src="./pildid/RobertLeht.jpg" alt="taustapilt">
         </div>
         <section id="home_lehe_info">
-            <p>This is the official website for the drummer Robert Leht. Siia võiks veel teksti kirjutada. 
-                Siia võiks veel teksti kirjutada. Siia võiks veel teksti kirjutada. Siia võiks veel teksti kirjutada. 
-                Siia võiks veel teksti kirjutada. Siia võiks veel teksti kirjutada. Siia võiks veel teksti kirjutada.
+            <p>My name is Robert Leht. I got my first drumset at 4. Made my first drum video at 
+                9 years old. Guitar hero was my favourite game growing up. 9 years later, I started 
+                making videos again, in hopes of improving and making drumming my pro- fessional career.
             </p>
         </section>
 
         <section class="videosection">
             </section>
         <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/NEYbaGSEwjo" 
-                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/OSkvwowcNCQ" 
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
             </iframe>
     </div>
 
