--- a/About.html
+++ b/About.html
@@ -7,21 +7,14 @@
     </head>
     <body>
         <div class="main-div">
-        <section class="section-3">
-            <h1 class="aboutpealkiri">My Drumming Favourites</h1>
-            <p class="about">
-                    Matt McGuire, 
-                    Tony Royster Jr, Matt Mingus, Matt Garstka, Alex Rüdinger
+        <div class="second-column">
+            <h1 class="aboutpealkiri-2">MY DRUMMING FAVOURITES</h1>
+            <p class="about-2">
+                    Matt McGuire | Tony Royster Jr | Matt Mingus | Matt Garstka | Alex Rüdinger
             </p>
-        </section>
-        <section class="section-2">
-            <h1 class="aboutpealkiri">Tl;dr</h1>
-            <p class="about">
-                Got my first drumset at 4. Made my first drum video at 9 years old. Guitar Hero was my favourite game growing up. 9 years later, started making videos again, in hopes of improving and making drumming my professional career.
-
-            </p>
-        </section>
-        <section class="section-1">
+        </div>
+            <img id="profiilipilt" src="./pildid/veebileht5.jpg" alt="profiilipilt">
+        <div class="first-column">
                 <h1 class="aboutpealkiri">MY DRUM CAREER</h1>
                 <p class="about">
                         I've played drums for as long as I can remember. 
@@ -30,7 +23,7 @@
                         A few years later, I started playing Guitar Hero and Rock Band and was always most interested in the drum parts.
                         I owe a lot of my earlier life practice hours to these video games. I played these for hours upon hours, which drastically improved my technique, musicality and opened me up to so much good music. I'm sure the games had a HUGE effect on my current drumming style and abilities. At 12-years-old I quit playing drums in a video game and focused more on acoustic drums. I was always fairly passionate about it, but I never practised for more than 2 hours a day, until after I was about 15. At that point I got a lot more into drumming on a daily basis and it slowly but surely became my main hobby and passion. I made my first acoustic drum cover when I was 9 years old. 9 years later, I decided to pursue my passion further and start releasing new covers of me playing to different songs that I like. Making Youtube videos motivates me to practise longer and harder and will hopefully play a role in developing my career in music.
                 </p>
-        </section>
+            </div>
         <div id="bg">
         <img src="./pildid/veebileht2.jpg" alt="">
         </div>  
