fixed cursor when scrolled down

--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
             <h1 class="aboutpealkiri">My Drumming Favourites</h1>
             <p class="about">
                     Matt McGuire, 
-                    Tony Royster Jr, Matt Mingus, Matt Garstka, Alex Rüdinger
+                    Tony Royster Jr, Matt Mingus, Matt Garstka, Alex R&#252dinger
             </p>
         </section>
         <section class="section-2">
@@ -28,7 +28,12 @@
                         Ever since I was 2 years old, I was interested in the world of rhythms and I expressed these rhythms by using forks as drumsticks and plates/pots as drums.
                          When I was 4, my brother(14 at the time) got a drumset and I too started playing on it instantly.
                         A few years later, I started playing Guitar Hero and Rock Band and was always most interested in the drum parts.
-                        I owe a lot of my earlier life practice hours to these video games. I played these for hours upon hours, which drastically improved my technique, musicality and opened me up to so much good music. I'm sure the games had a HUGE effect on my current drumming style and abilities. At 12-years-old I quit playing drums in a video game and focused more on acoustic drums. I was always fairly passionate about it, but I never practised for more than 2 hours a day, until after I was about 15. At that point I got a lot more into drumming on a daily basis and it slowly but surely became my main hobby and passion. I made my first acoustic drum cover when I was 9 years old. 9 years later, I decided to pursue my passion further and start releasing new covers of me playing to different songs that I like. Making Youtube videos motivates me to practise longer and harder and will hopefully play a role in developing my career in music.
+                        I owe a lot of my earlier life practice hours to these video games. I played these for hours upon hours, which drastically improved my technique, musicality and opened me up to so much good music.
+                        I'm sure the games had a HUGE effect on my current drumming style and abilities. At 12-years-old 
+                        I quit playing drums in a video game and focused more on acoustic drums. I was always fairly passionate about it, but I never practised for more than 2 hours a day, until after I was about 15.
+                        At that point I got a lot more into drumming on a daily basis and it slowly but surely became my main hobby and passion. 
+                        I made my first acoustic drum cover when I was 9 years old. 9 years later, I decided to pursue my passion further and start releasing new covers of me playing to different songs that I like. 
+                        Making Youtube videos motivates me to practise longer and harder and will hopefully play a role in developing my career in music.
                 </p>
         </section>
         <div id="bg">
