--- a/About.html
+++ b/About.html
@@ -46,11 +46,13 @@
                         <script src="pop-up.js"></script>
                 </div>
             </div>
+            <footer class="footer">
         <div class="socialLinks">
         <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
         <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
         <a href="https://www.youtube.com/user/Roobertist"><img src="./Pildid/Sotsmeedia ikoonid/youtubeIcon.png" alt="Youtube logo" id="social_media_icon"></a>
         </div>
         </div>
+    </footer>
     </body>
 </html>
