--- a/About.html
+++ b/About.html
@@ -8,14 +8,14 @@
     <body>
         <div class="main-div">
         <div class="second-column">
-            <h1 class="aboutpealkiri-2">MY DRUMMING FAVOURITES</h1>
+            <h1 class="aboutpealkiri-2">MY FAVOURITE DRUMMERS</h1>
             <p class="about-2">
-                    Matt McGuire | Tony Royster Jr | Matt Mingus | Matt Garstka | Alex R&#252dinger
+                    Matt McGuire | Tony Royster Jr | Matt Mingus | Matt Garstka | Alex R&#252;dinger
             </p>
         </div>
             <img id="profiilipilt" src="./pildid/veebileht5.jpg" alt="profiilipilt">
         <div class="first-column">
-                <h1 class="aboutpealkiri">MY DRUM CAREER</h1>
+                <h1 class="aboutpealkiri">MY CAREER AS A DRUMMER</h1>
                 <p class="about">
                         I've played drums for as long as I can remember. 
                         Ever since I was 2 years old, I was interested in the world of rhythms and I expressed these rhythms by using forks as drumsticks and plates/pots as drums.
@@ -39,17 +39,18 @@
                     <a href="./Skeleton.html">Home</a>
                     <a href="./About.html">About</a>
                     <div class="popup" onclick="popUpFunction()">Equipment
-                     <span class="popuptext" id="myPopup">I play mainly Paiste cymbals, Evans drumheads, Vic Firth drumsticks, Tama drums.
-                        I use SHURE SE315 in-ear monitors, Samson microphones and Roland electronics.
-                        I always change my cymbal and drumhead setup according to the song/style I'm playing.
+                     <span class="popuptext" id="myPopup">I mainly play on Paiste cymbals, Evans drumheads, Vic Firth drumsticks, Tama drums.
+                        On the tech side use SHURE SE315 in-ear monitors, Samson microphones and Roland electronics.
+                        I always change my cymbal and drumhead setup according to the song/style I'm playing so the outcome would be as good
+                        as possible.
                         </span></div>
                         <script src="pop-up.js"></script>
                 </div>
             </div>
         <div class="socialLinks">
-        <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
-        <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
-        <a href="https://www.youtube.com/user/Roobertist"><img src="./Pildid/Sotsmeedia ikoonid/youtubeIcon.png" alt="Youtube logo" id="social_media_icon"></a>
+        <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia_ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
+        <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia_ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
+        <a href="https://www.youtube.com/user/Roobertist"><img src="./Pildid/Sotsmeedia_ikoonid/youtubeIcon.png" alt="Youtube logo" id="social_media_icon"></a>
         </div>
         </div>
     </body>
