--- a/Skeleton.html
+++ b/Skeleton.html
@@ -10,9 +10,13 @@
         <img src="./pildid/RobertLeht.jpg" alt="taustapilt">
         </div>
         <section id="home_lehe_info">
-            <p>My name is Robert Leht. I got my first drumset at 4. Made my first drum video at 
-                9 years old. Guitar hero was my favourite game growing up. 9 years later, I started 
-                making videos again, in hopes of improving and making drumming my pro- fessional career.
+            <p>My name is Robert Leht.</p>
+            <p>
+                Music has always played a huge part in my life - at the age of four I got my very own drumset,
+                my favourite game as a kid was Guitar Hero and as a nine year old boy, I made my first Youtube video.
+                After that I practiced and after nine years of polishing my skills, I started to make YT content again.
+                My dream is to become a professional drummer one day and I'm doing everything I can right now to make that dream 
+                come true.
             </p>
         </section>
 
@@ -32,18 +36,19 @@
                 <a href="./Skeleton.html">Home</a>
                 <a href="./About.html">About</a>
                 <div class="popup" onclick="popUpFunction()">Equipment
-                 <span class="popuptext" id="myPopup">I play mainly Paiste cymbals, Evans drumheads, Vic Firth drumsticks, Tama drums.
-                    I use SHURE SE315 in-ear monitors, Samson microphones and Roland electronics.
-                    I always change my cymbal and drumhead setup according to the song/style I'm playing.
+                 <span class="popuptext" id="myPopup">I mainly play on Paiste cymbals, Evans drumheads, Vic Firth drumsticks, Tama drums.
+                    On the tech side use SHURE SE315 in-ear monitors, Samson microphones and Roland electronics.
+                    I always change my cymbal and drumhead setup according to the song/style I'm playing so the outcome would be as good
+                    as possible.
                     </span></div>
                     <script src="pop-up.js"></script>
             </div>
         </div>
 
         <div class="socialLinks">
-        <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
-        <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
-        <a href="https://www.youtube.com/user/Roobertist"><img src="./Pildid/Sotsmeedia ikoonid/youtubeIcon.png" alt="Youtube logo" id="social_media_icon"></a>
+            <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia_ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
+            <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia_ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
+            <a href="https://www.youtube.com/user/Roobertist"><img src="./Pildid/Sotsmeedia_ikoonid/youtubeIcon.png" alt="Youtube logo" id="social_media_icon"></a>
         </div>
     </body>
 </html>
