--- a/Skeleton.html
+++ b/Skeleton.html
@@ -3,29 +3,27 @@
     <head>
         <title>Robert Leht Drums</title>
         <link rel="stylesheet" href="design.css" />
+        <link rel="stylesheet" href="skeleton.css" />
         <script src="cursor.js"></script>
     </head>
     <body>
+        <div class="main-div">
+        <h1 id="pageTitle">ROBERT LEHT || DRUMS</h1>
         <div id="bg">
         <img src="./pildid/RobertLeht.jpg" alt="taustapilt">
         </div>
-        <section id="home_lehe_info">
+        <div class="info-tekst">
             <p>My name is Robert Leht. I got my first drumset at 4. Made my first drum video at 
                 9 years old. Guitar hero was my favourite game growing up. 9 years later, I started 
                 making videos again, in hopes of improving and making drumming my pro- fessional career.
             </p>
-        </section>
-
-        <section class="videosection">
-            </section>
+        </div>
         <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/OSkvwowcNCQ" 
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
             </iframe>
-    </div>
-
-        <h1 id="pageTitle">ROBERT LEHT || DRUMS</h1>
+        </div>
         <div class="dropdown">
             <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
             <div class = "dropdown-content">
@@ -44,6 +42,7 @@
         <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia ikoonid/facebookIcon.png" alt="Facebook logo" id="social_media_icon"></a>
         <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia ikoonid/instagramIcon.png" alt="Instagram logo" id="social_media_icon"></a>
         <a href="https://www.youtube.com/user/Roobertist"><img src="./Pildid/Sotsmeedia ikoonid/youtubeIcon.png" alt="Youtube logo" id="social_media_icon"></a>
+        </div>
         </div>
     </body>
 </html>
