--- a/Skeleton.html
+++ b/Skeleton.html
@@ -12,7 +12,7 @@
         <div id="bg">
         <img src="./pildid/RobertLeht.jpg" alt="taustapilt">
         </div>
-        <section id="home_lehe_info">
+        <div class="info-tekst">
             <p>My name is Robert Leht.</p>
             <p>
                 Music has always played a huge part in my life - at the age of four I got my very own drumset,
