--- a/Favourites.html
+++ b/Favourites.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Robert Leht Drums</title>
         <link rel="stylesheet" href="Design.css"/>
         <link rel="stylesheet" href="Favourites.css"/>
         <script src="cursor.js"></script>
+        <meta charset="UTF-8"/>
     </head>
     <body>
         <h1 id="pageTitle">ROBERT LEHT || DRUMS</h1>
