--- a/About.html
+++ b/About.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Robert Leht Drums</title>
         <link rel="stylesheet" href="about.css" />
         <link rel="stylesheet" href="design.css" />
         <script src="cursor.js"></script>
+        <meta charset="utf-8"/>
     </head>
     <body>
         <h1 id="pageTitle">ROBERT LEHT || DRUMS</h1>
@@ -54,9 +55,8 @@
 
         <a href="https://www.youtube.com/user/Roobertist"><img src="./Pildid/Sotsmeedia_ikoonid/youtubeIcon.png"
              alt="Youtube logo" class="social_media_icon"></a>
-        </div>
-        </div>
     </div>
     </footer>
+    </div>
     </body>
 </html>
