--- a/Skeleton.html
+++ b/Skeleton.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Robert Leht Drums</title>
         <link rel="stylesheet" href="design.css" />
         <link rel="stylesheet" href="skeleton.css" />
         <script src="cursor.js"></script>
+        <meta charset="utf-8"/>
     </head>
     <body>
         <div class="main-div">
@@ -24,7 +25,7 @@
         </div>
         <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/OSkvwowcNCQ" 
-                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
             </iframe>
         </div>
@@ -50,6 +51,7 @@
             <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia_ikoonid/instagramIcon.png" alt="Instagram logo" class="social_media_icon"></a>
             <a href="https://www.youtube.com/user/Roobertist"><img src="./Pildid/Sotsmeedia_ikoonid/youtubeIcon.png" alt="Youtube logo" class="social_media_icon"></a>
         </div>
-       </footer>
+        </footer>
+        </div>
     </body>
 </html>
