pildilehekulg igas menüüs

--- a/About.html
+++ b/About.html
@@ -41,7 +41,7 @@
                         as possible.
                         </span></div>
                     <a href="./Favourites.html">Favourite drummers</a>
-                    <a href="#">Pictures</a>
+                    <a href="./pildilehekulg.html">Pictures</a>
                         <script src="pop-up.js"></script>
                 </div>
             </div>
