project wiki and made changes to dropdown and popup

--- a/main.html
+++ b/main.html
@@ -31,9 +31,9 @@
         <div class="dropdown">
             <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
             <div class = "dropdown-content">
-                <a href="./Skeleton.html">Home</a>
+                <a href="./main.html">Home</a>
                 <a href="./About.html">About</a>
-                <div class="popup" onclick="popUpFunction()">Equipment
+                <div class="popup">Equipment
                  <span class="popuptext" id="myPopup">I mainly play on Paiste cymbals, Evans drumheads, Vic Firth drumsticks, Tama drums.
                     On the tech side use SHURE SE315 in-ear monitors, Samson microphones and Roland electronics.
                     I always change my cymbal and drumhead setup according to the song/style I'm playing so the outcome would be as good
@@ -41,7 +41,6 @@
                     </span></div>
                 <a href="./Favourites.html">Favourite drummers</a>
                 <a href="#">Pictures</a>
-                    <script src="pop-up.js"></script>
             </div>
         </div>
         <footer class="footer">
