Lisasin Pictures lingi html failidesse

--- a/Favourites.html
+++ b/Favourites.html
@@ -42,7 +42,7 @@
 
 
             <div id="bg">
-            <img src="./pildid/veebileht2.jpg" alt="">
+            <img src="./pildid/veebileht1.jpg" alt="">
             </div>  
             <div class="dropdown">
                 <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
@@ -57,7 +57,7 @@
                             </span>
                     </div>
                     <a href="./Favourites.html">Favourite drummers</a>
-                    <a href="#">Pictures</a>
+                    <a href="./Pictures.html">Pictures</a>
                 </div>
             </div>
         </div>
