--- a/Pictures.html
+++ b/Pictures.html
@@ -44,7 +44,7 @@
                <div class="dropdown">
             <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
             <div class = "dropdown-content">
-                <a href="./Skeleton.html">Home</a>
+                <a href="./main.html">Home</a>
                 <a href="./About.html">About</a>
                 <div class="popup" onclick="popUpFunction()">Equipment
                  <span class="popuptext" id="myPopup">I mainly play on Paiste cymbals, Evans drumheads, Vic Firth drumsticks, Tama drums.
@@ -53,7 +53,7 @@
                     as possible.
                     </span></div>
                 <a href="./Favourites.html">Favourite drummers</a>
-                <a href="./pildilehekulg.html">Pictures</a>
+                <a href="./Pictures.html">Pictures</a>
                     <script src="pop-up.js"></script>
             </div>
         </div>
