--- a/main.html
+++ b/main.html
@@ -41,7 +41,7 @@
                     as possible.
                     </span></div>
                 <a href="./Favourites.html">Favourite drummers</a>
-                <a href="#">Pictures</a>
+                <a href="./Pictures.html">Pictures</a>
             </div>
         </div>
         
