--- a/Pictures.html
+++ b/Pictures.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <title>Robert Leht Drums</title>
-        <link rel="stylesheet" href="pildilehekulg.css" />
-        <link rel="stylesheet" href="skeleton.css" />
+        <link rel="stylesheet" href="Pictures.css" />
+        <link rel="stylesheet" href="main.css" />
         <script src="cursor.js"></script>
         <meta charset="utf-8"/>
     </head>
