--- a/pildilehekulg.html
+++ b/pildilehekulg.html
@@ -3,7 +3,7 @@
     <head>
         <title>Robert Leht Drums</title>
         <link rel="stylesheet" href="pildilehekulg.css" />
-        <link rel="stylesheet" href="skeleton.css" />
+        <link rel="stylesheet" href="design.css" />
         <script src="cursor.js"></script>
         <meta charset="utf-8"/>
     </head>
@@ -16,17 +16,17 @@
                       <img
                         src="./pildid/veebileht4.jpg"
                         class="slider-image"
-                        alt="salongi_pilt"
+                        alt="robert1"
                       />
                       <img
                         src="./pildid/veebileht2.jpg"
                         class="slider-image"
-                        alt="salongi_pilt_2"
+                        alt="robert2"
                       />
                       <img
                         src="./pildid/veebileht1.jpg"
                         class="slider-image"
-                        alt="salongi_pilt_3"
+                        alt="robert3"
                       />
                     </div>
                     <div class="button-holder">
