--- a/About.html
+++ b/About.html
@@ -32,7 +32,7 @@
         <div class="dropdown">
                 <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
                 <div class = "dropdown-content">
-                    <a href="./main.html">Home</a>
+                    <a href="./Main/main.html">Home</a>
                     <a href="./About.html">About</a>
                     <div class="popup">Equipment
                      <span class="popuptext" id="myPopup">I mainly play on Paiste cymbals, Evans drumheads, Vic Firth drumsticks, Tama drums.
