--- a/Main/main.html
+++ b/Main/main.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <title>Robert Leht Drums</title>
-        <link rel="stylesheet" href="design.css" />
-        <link rel="stylesheet" href="skeleton.css" />
+        <link rel="stylesheet" href="../Design.css"/>
+        <link rel="stylesheet" href="main.css" />
         <script src="cursor.js"></script>
         <meta charset="utf-8"/>
     </head>
@@ -11,7 +11,7 @@
         <div class="main-div">
         <h1 id="pageTitle">ROBERT LEHT || DRUMS</h1>
         <div id="bg">
-        <img src="./pildid/RobertLeht.jpg" alt="taustapilt">
+        <img src="../Pildid/RobertLeht.jpg" alt="taustapilt">
         </div>
         <div class="info-tekst">
             <p>My name is Robert Leht.</p>
@@ -30,25 +30,25 @@
             </iframe>
         </div>
         <div class="dropdown">
-            <img class="dropdownBtn" src="./Pildid/menuIcon.png" alt="MenuIcon">
+            <img class="dropdownBtn" src="../Pildid/menuIcon.png" alt="MenuIcon">
             <div class = "dropdown-content">
                 <a href="./main.html">Home</a>
-                <a href="./About.html">About</a>
+                <a href="../About.html">About</a>
                 <div class="popup">Equipment
                  <span class="popuptext" id="myPopup">I mainly play on Paiste cymbals, Evans drumheads, Vic Firth drumsticks, Tama drums.
                     On the tech side use SHURE SE315 in-ear monitors, Samson microphones and Roland electronics.
                     I always change my cymbal and drumhead setup according to the song/style I'm playing so the outcome would be as good
                     as possible.
                     </span></div>
-                <a href="./Favourites.html">Favourite drummers</a>
+                <a href="../Favourites.html">Favourite drummers</a>
                 <a href="#">Pictures</a>
             </div>
         </div>
         <footer class="footer">
         <div class="socialLinks">
-            <a href="https://www.facebook.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia_ikoonid/facebookIcon.png" alt="Facebook logo" class="social_media_icon"></a>
-            <a href="https://www.instagram.com/robertlehtdrums/"><img src="./Pildid/Sotsmeedia_ikoonid/instagramIcon.png" alt="Instagram logo" class="social_media_icon"></a>
-            <a href="https://www.youtube.com/user/Roobertist"><img src="./Pildid/Sotsmeedia_ikoonid/youtubeIcon.png" alt="Youtube logo" class="social_media_icon"></a>
+            <a href="https://www.facebook.com/robertlehtdrums/"><img src="../Pildid/Sotsmeedia_ikoonid/facebookIcon.png" alt="Facebook logo" class="social_media_icon"></a>
+            <a href="https://www.instagram.com/robertlehtdrums/"><img src="../Pildid/Sotsmeedia_ikoonid/instagramIcon.png" alt="Instagram logo" class="social_media_icon"></a>
+            <a href="https://www.youtube.com/user/Roobertist"><img src="../Pildid/Sotsmeedia_ikoonid/youtubeIcon.png" alt="Youtube logo" class="social_media_icon"></a>
         </div>
         </footer>
         </div>
