--- a/About/About.html
+++ b/About/About.html
@@ -6,25 +6,26 @@
         <link rel="stylesheet" href="../Design.css" />
         <script src="cursor.js"></script>
         <meta charset="utf-8"/>
+
     </head>
     <body>
         <h1 id="pageTitle">ROBERT LEHT || DRUMS</h1>
         <div class="main-div">
         <img id="profiilipilt" src="../pildid/veebileht5.jpg" alt="profiilipilt">
-        <div class="first-column">
-                <h1 class="aboutpealkiri">MY CAREER AS A DRUMMER</h1>
-                <p class="about">
-                        I've played drums for as long as I can remember. 
-                        Ever since I was 2 years old, I was interested in the world of rhythms and I expressed these rhythms by using forks as drumsticks and plates/pots as drums.
-                         When I was 4, my brother(14 at the time) got a drumset and I too started playing on it instantly.
-                        A few years later, I started playing Guitar Hero and Rock Band and was always most interested in the drum parts.
-                        I owe a lot of my earlier life practice hours to these video games. I played these for hours upon hours, which drastically improved my technique, musicality and opened me up to so much good music.
-                        I'm sure the games had a HUGE effect on my current drumming style and abilities. At 12-years-old 
-                        I quit playing drums in a video game and focused more on acoustic drums. I was always fairly passionate about it, but I never practised for more than 2 hours a day, until after I was about 15.
-                        At that point I got a lot more into drumming on a daily basis and it slowly but surely became my main hobby and passion. 
-                        I made my first acoustic drum cover when I was 9 years old. 9 years later, I decided to pursue my passion further and start releasing new covers of me playing to different songs that I like. 
-                        Making Youtube videos motivates me to practise longer and harder and will hopefully play a role in developing my career in music.
-                </p>
+            <div class="first-column">
+                    <h1 class="aboutpealkiri">MY CAREER AS A DRUMMER</h1>
+                    <p class="about">
+                            I've played drums for as long as I can remember. 
+                            Ever since I was 2 years old, I was interested in the world of rhythms and I expressed these rhythms by using forks as drumsticks and plates/pots as drums.
+                            When I was 4, my brother(14 at the time) got a drumset and I too started playing on it instantly.
+                            A few years later, I started playing Guitar Hero and Rock Band and was always most interested in the drum parts.
+                            I owe a lot of my earlier life practice hours to these video games. I played these for hours upon hours, which drastically improved my technique, musicality and opened me up to so much good music.
+                            I'm sure the games had a HUGE effect on my current drumming style and abilities. At 12-years-old 
+                            I quit playing drums in a video game and focused more on acoustic drums. I was always fairly passionate about it, but I never practised for more than 2 hours a day, until after I was about 15.
+                            At that point I got a lot more into drumming on a daily basis and it slowly but surely became my main hobby and passion. 
+                            I made my first acoustic drum cover when I was 9 years old. 9 years later, I decided to pursue my passion further and start releasing new covers of me playing to different songs that I like. 
+                            Making Youtube videos motivates me to practise longer and harder and will hopefully play a role in developing my career in music.
+                    </p>
             </div>
         <div id="bg">
         <img src="../pildid/veebileht2.jpg" alt="">
@@ -35,11 +36,12 @@
                     <a href="../Main/main.html">Home</a>
                     <a href="../About/About.html">About</a>
                     <div class="popup">Equipment
-                     <span class="popuptext" id="myPopup">I mainly play on Paiste cymbals, Evans drumheads, Vic Firth drumsticks, Tama drums.
-                        On the tech side use SHURE SE315 in-ear monitors, Samson microphones and Roland electronics.
-                        I always change my cymbal and drumhead setup according to the song/style I'm playing so the outcome would be as good
-                        as possible.
-                        </span></div>
+                        <span class="popuptext" id="myPopup">I mainly play on Paiste cymbals, Evans drumheads, Vic Firth drumsticks, Tama drums.
+                            On the tech side use SHURE SE315 in-ear monitors, Samson microphones and Roland electronics.
+                            I always change my cymbal and drumhead setup according to the song/style I'm playing so the outcome would be as good
+                            as possible.
+                        </span>
+                    </div>
                     <a href="../Favourites/Favourites.html">Favourite drummers</a>
                     <a href="../Pictures/Pictures.html">Pictures</a>
                 </div>
@@ -55,7 +57,7 @@
 
         <a href="https://www.youtube.com/user/Roobertist"><img src="../Pildid/Sotsmeedia_ikoonid/youtubeIcon.png"
              alt="Youtube logo" class="social_media_icon"></a>
-    </div>
+        </div>
     </footer>
     </body>
 </html>
