--- a/Main/main.html
+++ b/Main/main.html
@@ -24,7 +24,7 @@
             </p>
         </div>
         <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/OSkvwowcNCQ" 
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/OSkvwowcNCQ" 
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
             </iframe>
@@ -35,11 +35,12 @@
                 <a href="./Main/main.html">Home</a>
                 <a href="../About/About.html">About</a>
                 <div class="popup">Equipment
-                 <span class="popuptext" id="myPopup">I mainly play on Paiste cymbals, Evans drumheads, Vic Firth drumsticks, Tama drums.
-                    On the tech side use SHURE SE315 in-ear monitors, Samson microphones and Roland electronics.
-                    I always change my cymbal and drumhead setup according to the song/style I'm playing so the outcome would be as good
-                    as possible.
-                    </span></div>
+                    <span class="popuptext" id="myPopup">I mainly play on Paiste cymbals, Evans drumheads, Vic Firth drumsticks, Tama drums.
+                        On the tech side use SHURE SE315 in-ear monitors, Samson microphones and Roland electronics.
+                        I always change my cymbal and drumhead setup according to the song/style I'm playing so the outcome would be as good
+                        as possible.
+                    </span>
+                </div>
                 <a href="../Favourites/Favourites.html">Favourite drummers</a>
                 <a href="../Pictures/Pictures.html">Pictures</a>
             </div>
