Changed file path pildid to Pildid, idk mby helps

--- a/About/About.html
+++ b/About/About.html
@@ -11,7 +11,7 @@
     <body>
         <h1 id="pageTitle">ROBERT LEHT || DRUMS</h1>
         <div class="main-div">
-        <img id="profiilipilt" src="../pildid/veebileht5.jpg" alt="profiilipilt">
+        <img id="profiilipilt" src="../Pildid/veebileht5.jpg" alt="profiilipilt">
             <div class="first-column">
                     <h1 class="aboutpealkiri">MY CAREER AS A DRUMMER</h1>
                     <p class="about">
@@ -28,7 +28,7 @@
                     </p>
             </div>
         <div id="bg">
-        <img src="../pildid/veebileht2.jpg" alt="">
+        <img src="../Pildid/veebileht2.jpg" alt="">
         </div>  
         <div class="dropdown">
                 <img class="dropdownBtn" src="../Pildid/menuIcon.png" alt="MenuIcon">
