--- a/Pictures/Pictures.html
+++ b/Pictures/Pictures.html
@@ -14,17 +14,17 @@
                     <span id="slider-image-3"></span>
                     <div class="image-holder">
                       <img
-                        src="../pildid/veebileht4.jpg"
+                        src="../Pildid/veebileht4.jpg"
                         class="slider-image"
                         alt="robert1"
                       />
                       <img
-                        src="../pildid/veebileht2.jpg"
+                        src="../Pildid/veebileht2.jpg"
                         class="slider-image"
                         alt="robert2"
                       />
                       <img
-                        src="../pildid/veebileht1.jpg"
+                        src="../Pildid/veebileht1.jpg"
                         class="slider-image"
                         alt="robert3"
                       />
@@ -38,7 +38,7 @@
         <div class="main-div">
         <h1 id="pageTitle">ROBERT LEHT || DRUMS</h1>
         <div id="bg">
-        <img src="../pildid/RobertLeht.jpg" alt="taustapilt">
+        <img src="../Pildid/RobertLeht.jpg" alt="taustapilt">
         </div>
                <div class="dropdown">
             <img class="dropdownBtn" src="../Pildid/menuIcon.png" alt="MenuIcon">
