fixed cursor file path

--- a/Favourites/Favourites.html
+++ b/Favourites/Favourites.html
@@ -4,7 +4,7 @@
         <title>Robert Leht Drums</title>
         <link rel="stylesheet" href="../Design.css"/>
         <link rel="stylesheet" href="Favourites.css"/>
-        <script src="cursor.js"></script>
+        <script src="../cursor.js"></script>
         <meta charset="UTF-8"/>
     </head>
     <body>
