--- a/Pictures/Pictures.html
+++ b/Pictures/Pictures.html
@@ -4,7 +4,7 @@
         <title>Robert Leht Drums</title>
         <link rel="stylesheet" href="Pictures.css" />
         <link rel="stylesheet" href="../Design.css" />
-        <script src="cursor.js"></script>
+        <script src="../cursor.js"></script>
         <meta charset="utf-8"/>
     </head>
     <body>
